Remove mockito from powertools-logging-logback.